# rag

./: .env  .gitignore  README.md  pyproject.toml  requirement.txt
notebook/: document.ipynb  pipeline.ipynb  rag_basic.ipynb
